additions, 2 new endpoints added, allowing to preview csv data and fetch metadata about existing csv files
